Oct 17 Commit Assign